--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
 
     <div id="section-3">
         <div id="subsection-3">
-        
+            <p id="subsection-3-paragraph-1">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+            <strong id="subsection-3-paragraph-2">-Thor, God of Thunder</strong>
         </div>
     </div>
-    
 
     <div id="section-4">
         <div id="subsection-4">
