Created the entire section 4 of the web page.
I've added a strong text, a paragraph and a button, all of it in a blue div's background.

--- a/index.html
+++ b/index.html
@@ -66,10 +66,14 @@
 
     <div id="section-4">
         <div id="subsection-4">
-        
+            <div id="content-subsection-4">
+                <strong>Call to action! It's time!</strong>
+                <p>Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <button id="button-subsection-4">Sign up</button>
         </div>
     </div>
-    
+
     <footer>
         <p>Copyright © The Odin Project 2021</p>
     </footer>
